Fixes to parallelblocksetter